# expenselm

./: .gitignore  Makefile  README.md  RESULTS.md  pyproject.toml
configs/: policy.yaml
data/: README.md  verification_log.md
data/chatml/: dev_chatml.jsonl
data/seed/: seed_examples.jsonl
data/splits/: dev.jsonl  test.jsonl  train.jsonl
docs/: FLASHCARDS.md  LEARNING_GUIDE.md  OPTIMIZATIONS.md  PROJECT_EXPLAINED.md  REMOTE_TRAINING.md  REPORT.md  REPORT_TEMPLATE.md  RUNBOOK.md  UNDERSTAND_AND_VIVA.md
notebooks/: expenselm_colab.ipynb  kaggle_expenselm.ipynb
report/: expenselm_report.tex
results/: e0.json  e1.json  e2.json  e4.json  failure_analysis_e2.md
src/expenselm/: __init__.py  cli.py  prompts.py  schema.py  systems.py
src/expenselm/analysis/: ablation.py  failure_analysis.py
src/expenselm/data/: contamination.py  format.py  generate.py  perturb.py  procedural.py
src/expenselm/eval/: grader.py  harness.py
src/expenselm/train/: dpo_unsloth.py  export_gguf.md  harvest_failures.py  sft_mlx.sh  sft_trl_reference.py  sft_unsloth.py
tests/: test_grader.py  test_perturb.py  test_schema.py
